<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_genre_sort_name"
        android:title="@string/menu_sort_name" />
    <item
        android:id="@+id/menu_genre_sort_random"
        android:title="@string/menu_sort_random" />
    <item
        android:id="@+id/menu_genre_sort_most_songs"
        android:title="@string/menu_sort_most_songs" />
</menu>
