<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home_label" />
    <item
        android:id="@+id/libraryFragment"
        android:icon="@drawable/ic_library_music"
        android:title="@string/menu_library_label" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search_button" />
    <item
        android:id="@+id/downloadFragment"
        android:icon="@drawable/ic_play_for_work"
        android:title="@string/menu_download_label" />
</menu>
