...
            android:layout_height="match_parent"
            app:behavior_hideable="true"
            app:behavior_peekHeight="@dimen/bottom_sheet_behavior_peek_height"
            app:layout_behavior="@string/bottom_sheet_behavior" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_navigation_height"
            android:layout_gravity="bottom"
            android:background="?attr/colorSurface"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
...
