...
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/library_title_genre" />


                    <TextView
                        android:id="@+id/genre_catalogue_text_view_clickable"
                        style="@style/TitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/library_title_genre_see_all_button" />
...
